--- a/src/App/Bundle/WebBundle/Resources/views/Default/index.html.twig
+++ b/src/App/Bundle/WebBundle/Resources/views/Default/index.html.twig
@@ -2,6 +2,6 @@
 
 {% block body %}
 <div class="container">
-    Hello {{ name }}!
+    <h1>Hello {{ name }} on twitter.com!</h1>
 </div>
 {% endblock %}
