Fixing services in AppWebBundle and some css styles

--- a/src/App/Bundle/WebBundle/Resources/views/Default/index.html.twig
+++ b/src/App/Bundle/WebBundle/Resources/views/Default/index.html.twig
@@ -1,7 +1,5 @@
-{% extends '::base.html.twig' %}
+{% extends 'AppWebBundle::base.html.twig' %}
 
-{% block body %}
-<div class="container">
+{% block content %}
     <h1>Hello {{ name }} on twitter.com!</h1>
-</div>
 {% endblock %}
