User controller and layout for application

--- a/src/App/Bundle/WebBundle/Resources/views/Default/index.html.twig
+++ b/src/App/Bundle/WebBundle/Resources/views/Default/index.html.twig
@@ -1,5 +1,17 @@
 {% extends 'AppWebBundle::base.html.twig' %}
 
 {% block content %}
-    <h1>Hello {{ name }} on twitter.com!</h1>
+	<div class="row">
+		<div class="span10">
+			<h1>Quer ganhar dinheiro pelo Twitter?</h1>
+			<p>O LomaTwee gera anúncios relevantes baseados no conteúdo que você publica no Twitter. Você escolhe a frequencia em que iremos publicar anúncios, o LomaTwee analisa suas postagens, encontra produtos relacionados e procura ofertas especiais para seus seguidores.</p>
+			<p>É simples, autorize, configure e deixe que o LomaTwee tuite por você. Cada compra irá gerar uma comissão para você.</p>
+		</div>
+	</div>
+	
+	<div class="row">
+		<div class="span10">
+			<a href="/login_check" class="btn primary">Authorizar minha conta no Twitter</a>
+		</div>
+	</div>
 {% endblock %}
